# tokyotyrant

tokyotyrant/: ChangeLog  Makefile.in  configure  configure.in  myconf.c  myconf.h  tcrdb.c  tcrdb.h  tcrmgr.c  tcrmttest.c  tcrtest.c  tculog.c  tculog.h  ttserver.c  ttulmgr.c  ttutil.c  ttutil.h
tokyotyrant/doc/: index.html
tokyotyrant/example/: httptest.pl  mcftest.pl  tcrdbex.c
tokyotyrant/man/: tcrdb.3  tcrmgr.1  tcrmttest.1  tcrtest.1  tculog.3  ttserver.1  ttulmgr.1  ttultest.1  ttutil.3
